lombok, other stuff